overflow fixed

--- a/main/static/css/generic.css
+++ b/main/static/css/generic.css
@@ -137,6 +137,7 @@ div#map {
     -webkit-flex-direction: row;
     flex-direction: row;
     background: #ffcccc;
+    overflow: scroll;
 }
 .inner-column-container {
     -webkit-flex-grow: 1;
